<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/buttonRed"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:text="@string/redplayer"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonRed"
        android:text="@string/blueplayer"
        android:textColor="#0000FF" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonBlue"
        android:text="@string/greenplayer"
        android:textColor="#00DD00" />

    <Button
        android:id="@+id/buttonYellow"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonGreen"
        android:text="@string/yellowplayer"
        android:textColor="#FFFF00" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonYellow"
        android:text="@string/blackplayer" />

    <EditText
        android:id="@+id/editTextRedScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBlue"
        android:layout_toEndOf="@+id/buttonRed"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/player"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextRedScore"
        android:layout_toEndOf="@+id/buttonRed"
        android:text="@string/score"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextBlueScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGreen"
        android:layout_toEndOf="@+id/buttonRed"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0" />

    <EditText
        android:id="@+id/editTextGreenScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonYellow"
        android:layout_toEndOf="@+id/buttonBlue"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0" />

    <EditText
        android:id="@+id/editTextYellowScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextGreenScore"
        android:layout_toEndOf="@+id/buttonYellow"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0" />

    <EditText
        android:id="@+id/editTextBlackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonBlack"
        android:layout_toEndOf="@+id/buttonYellow"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0" />

</RelativeLayout>
